[FIX] overflow issue

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -312,7 +312,7 @@ a:hover {
 
 .description_pane {
   height: 250px;
-  overflow:hidden;
+  overflow:auto;
 }
 
 #slides {
